# cli-jaw-skills

./: README.md  conftest.py  pyproject.toml  registry.json  requirements-office-tests.txt
1password/: SKILL.md
agent-eval/: SKILL.md
agent-harness-construction/: SKILL.md
agent-repl/: SKILL.md
agent-setup-wizard/: SKILL.md
agentic-engineering/: SKILL.md
agents-sdk/: SKILL.md
ai-first-engineering/: SKILL.md
algorithmic-art/: SKILL.md
android-clean-architecture/: SKILL.md
api-design-reviewer/: SKILL.md
apple-notes/: SKILL.md
apple-reminders/: SKILL.md
architecture-decision-records/: SKILL.md
atlas/: SKILL.md
autonomous-loops/: SKILL.md
blueprint/: SKILL.md
brainstorming/: SKILL.md
browser/: SKILL.md
canvas-design/: SKILL.md
carrier-relationship-management/: SKILL.md
changelog-generator/: SKILL.md
claude-api/: SKILL.md
clickhouse-io/: SKILL.md
cloudflare-deploy/: SKILL.md
codebase-onboarding/: SKILL.md
codebase-orientation/: SKILL.md
compose-multiplatform-patterns/: SKILL.md
config-file-explainer/: SKILL.md
content-hash-cache-pattern/: SKILL.md
context-budget/: SKILL.md
context-compression/: SKILL.md
continuous-agent-loop/: SKILL.md
continuous-learning/: SKILL.md
continuous-learning-v2/: SKILL.md
cost-aware-llm-pipeline/: SKILL.md
cpp-coding-standards/: SKILL.md
cpp-testing/: SKILL.md
crosspost/: SKILL.md
customs-trade-compliance/: SKILL.md
data-scraper-agent/: SKILL.md
data-structure-chooser/: SKILL.md
ooxml_core/: __init__.py  cjk_utils.py  pyproject.toml  repair.py  soffice.py
(+464 files in other folders)
