[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ooxml_core"
version = "0.1.0"
description = "Shared OOXML utilities for Office document manipulation (DOCX, PPTX, XLSX)"
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.7",
]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1"]
